connected the font

--- a/scss/reset.scss
+++ b/scss/reset.scss
@@ -3,10 +3,13 @@
 *::before {
    margin: 0;
    padding: 0;
+   border: 0;
    box-sizing: border-box;
 }
 html,
 body {
+   width: 100%;
+   height: 100%;
    margin: 0;
    padding: 0;
 }
