--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,10 @@
 *,
 *::before,
-*::before {
+*::after {
   margin: 0;
   padding: 0;
   border: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 html,
@@ -27,6 +26,201 @@ h6 {
   font-family: inherit;
 }
 
+p {
+  margin: 0;
+  padding: 0;
+}
+
 ul, ol {
   list-style: none;
+}
+
+a {
+  text-decoration: none;
+}
+
+img {
+  display: block;
+}
+
+body {
+  font-family: "Montserrat", sans-serif;
+  font-size: 16px;
+  color: #333333;
+}
+
+.container {
+  width: 1200px;
+  max-width: 100%;
+  margin: 0 auto;
+}
+
+.header {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 100;
+  width: 100%;
+  padding: 30px 0 0;
+}
+
+.header__inner {
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
+}
+
+.header__logo {
+  font-size: 30px;
+  color: #fff;
+  font-weight: 700;
+}
+
+.header__nav {
+  display: flex;
+}
+.header__nav li {
+  margin-left: 50px;
+}
+
+.nav__link {
+  position: relative;
+  display: inline-block;
+  font-family: "Montserrat", sans-serif;
+  font-size: 14px;
+  font-weight: 400;
+  vertical-align: top;
+  color: #fff;
+  text-transform: uppercase;
+  transition: color 0.2s linear;
+}
+.nav__link::after {
+  content: "";
+  display: block;
+  height: 2px;
+  width: 100%;
+  background-color: #fce38a;
+  opacity: 0;
+  transition: opacity 0.2s linear;
+}
+.nav__link:hover {
+  color: #fce38a;
+}
+.nav__link:hover::after {
+  opacity: 1;
+}
+
+.intro {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
+  height: 100vh;
+  padding-top: 50px;
+  background: #e98c83 url("/img/intro.jpg") center/cover no-repeat;
+}
+
+.intro__tittle {
+  max-width: 850px;
+  margin: 0 auto;
+  position: relative;
+}
+.intro__tittle h2 {
+  font-family: "Kaushan Script", cursive;
+  font-size: 72px;
+  font-weight: 400;
+  color: #fff;
+  text-align: center;
+  margin-bottom: 30px;
+}
+.intro__tittle h1 {
+  font-family: "Montserrat", sans-serif;
+  font-size: 150px;
+  font-weight: bold;
+  line-height: 0.9;
+  color: #fff;
+  text-transform: uppercase;
+  text-align: center;
+}
+.intro__tittle h1::after {
+  content: "";
+  display: block;
+  width: 60px;
+  height: 3px;
+  background-color: #fff;
+  margin: 50px auto 50px;
+}
+
+.btn {
+  display: block;
+  width: 150px;
+  height: 40px;
+  border: 3px solid #fff;
+  margin: 0 auto;
+  padding: 8px 22px;
+  font-family: "Montserrat", sans-serif;
+  font-size: 14px;
+  font-weight: 700;
+  text-transform: uppercase;
+  text-align: center;
+  color: #fff;
+  background-color: inherit;
+  cursor: pointer;
+  transition: color 0.2s linear, border-color 0.2s linear, background-color 0.2s linear;
+}
+.btn:hover {
+  color: #333;
+  border-color: #f38181;
+  background-color: #fff;
+}
+/* Slider */
+.slider {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  z-index: 2;
+  width: 100%;
+}
+
+.slider__inner {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 50px;
+}
+.slider__inner .slider__item {
+  position: relative;
+  width: 24%;
+  border-top: 3px solid #fff;
+  font-size: 24px;
+  font-weight: 700;
+  color: #fff;
+  padding: 15px 0;
+  opacity: 0.7;
+  transition: color 0.2s linear, border-color 0.2s linear;
+}
+.slider__inner .slider__item span {
+  font-family: "Montserrat", sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  color: #fff;
+  text-transform: uppercase;
+}
+.slider__inner .slider__item:hover {
+  opacity: 1;
+}
+.slider__inner .slider__item::before {
+  content: "";
+  position: absolute;
+  top: -3px;
+  left: 0;
+  display: block;
+  width: 70px;
+  height: 3px;
+  background-color: #f38181;
+  opacity: 0;
+  transition: opacity 0.2s linear;
+}
+.slider__inner .slider__item:hover::before {
+  opacity: 1;
 }
