--- a/scss/reset.scss
+++ b/scss/reset.scss
@@ -1,6 +1,6 @@
 *,
 *::before,
-*::before {
+*::after {
    margin: 0;
    padding: 0;
    border: 0;
@@ -23,6 +23,16 @@ h6 {
    padding: 0;
    font-family: inherit;
 }
+p {
+   margin: 0;
+   padding: 0;
+}
 ul, ol {
    list-style: none;
+}
+a {
+   text-decoration: none;
+}
+img {
+   display: block;
 }
