--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,1 +1,128 @@
 @import 'reset';
+@import 'mixin';
+
+body {
+   font-family: 'Montserrat', sans-serif;
+   font-size: 16px;
+   color: #333333;
+}
+.container {
+   width: 1200px;
+   max-width: 100%;
+   margin: 0 auto;
+}
+// header
+.header {
+   @include header;
+}
+.header__inner {
+   display: flex;
+   justify-content: space-between;
+   align-items: baseline;
+}
+.header__logo {
+   @include logo;
+}
+.header__nav {
+   display: flex;
+   li {
+      margin-left: 50px;
+   }
+}
+.nav__link {
+   @include navLink;
+}
+// intro
+.intro {
+   position: relative;
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   width: 100%;
+   height: 100vh;
+   padding-top: 50px;
+   background: #e98c83 url('/img/intro.jpg') center/cover no-repeat;
+}
+.intro__tittle {
+   max-width: 850px;
+   margin: 0 auto;
+   position: relative;
+
+   h2 {
+      font-family: 'Kaushan Script', cursive;
+      font-size: 72px;
+      font-weight: 400;
+      color: #fff;
+      text-align: center;
+      margin-bottom: 30px
+   }
+   h1 {
+      @include introTitle;
+      &::after {
+         content: '';
+         // position: absolute;
+         // bottom: 0;
+         // left: 50%;
+         display: block;
+         width: 60px;
+         height: 3px;
+         background-color: #fff;
+         margin: 50px auto 50px;
+         }
+   }
+   
+}
+// Button
+.btn {
+   @include btn;
+}
+// slider
+.slider {
+   position: absolute;
+   left: 0;
+   bottom: 0;
+   z-index: 2;
+   width: 100%;
+}
+.slider__inner {
+   display: flex;
+   justify-content: space-between;
+   margin-top: 50px;
+   .slider__item {
+      position: relative;
+      width: 24%;
+      border-top: 3px solid #fff;
+      font-size: 24px;
+      font-weight: 700;
+      color: #fff;
+      padding: 15px 0;
+      opacity: .7;
+      transition: color .2s linear, border-color .2s linear;
+     
+      span {
+         font-family: 'Montserrat', sans-serif;
+         font-size: 18px;
+         font-weight: 400;
+         color: #fff;
+         text-transform: uppercase;
+      }
+      &:hover {
+         opacity: 1;
+      }
+      &::before{
+        content: '';
+        position: absolute;
+        top: -3px;
+        left: 0;
+        display: block;
+        width: 70px;
+        height: 3px;
+        background-color: #f38181;
+        opacity: 0;
+        transition: opacity .2s linear;
+      }
+      &:hover::before{
+         opacity: 1;
+      }
+   }
+}
