--- a/scss/mixin.scss
+++ b/scss/mixin.scss
@@ -65,8 +65,31 @@
    background-color .2s linear;
       &:hover {
          color: #333;
-         border-color: #f38181;
+         border-color: $lineColor;
          background-color: #fff;
       }
    
+}
+@mixin line {
+      content: '';
+      display: block;
+      height: 3px;
+      width: 60px;
+      background-color: $lineColor;
+}
+
+@mixin sectionSupTittle {
+   font-family: $fontSuptittle;
+   font-size: 24px;
+}
+@mixin sectionSubTittle {
+   font-family: $fontSubtittle;
+   font-size: 30px;
+   text-transform: uppercase;
+}
+@mixin sectionText {
+font-family: $fontSectionText;
+font-size: 15px;
+color: $sectionTextColor;
+line-height: 1.6;
 }
