--- a/scss/style.scss
+++ b/scss/style.scss
@@ -135,7 +135,7 @@ body {
 }
 .section__header {
    text-align: center;
-   margin: 0 auto 50px;
+   margin: 0 auto;
    width: 100%;
    width: 950px;
    .section__suptittle {
@@ -155,6 +155,7 @@ body {
 }
 // about
 .about {
+   margin-top: 50px;
    display: flex;
    justify-content: space-between;
 }
@@ -211,7 +212,68 @@ body {
       }
    }
 }
-
+// Facts
+.facts {
+   background-color: $cardColor;
+}
+.facts__inner {
+   display: flex;
+}
+.facts__item {
+   flex: 1 1 0;
+   border-left: 1px solid #b5eae0;
+   text-align: center;
+   color: $fontColor;
+   padding: 80px 0;
+   .fact__count {
+      font-family: $fontSubtittle;
+      font-size: 72px;
+      font-weight: 700;
+      margin-bottom: 10px;
+   }
+   .fact__text {
+      font-family: $fontSubtittle;
+      font-size: 14px;
+      text-transform: uppercase;
+   }
+}
+.facts__item:last-child {
+   border-right: 1px solid #b5eae0;
+}
+.services {
+   display: flex;
+   margin: 0 -25px;
+}
+.service__item {
+   width: 33.333%;
+   display: flex;
+   padding: 0 25px;
+}
+.service__img {
+   padding-top: 5px;
+   padding-left: 5px;
+   margin-right: 20px;
+   img {
+      width: 32px;
+      height: 28px;
+   }
+}
+.service__content {
+   h4 {
+      font-family: $fontSubtittle;
+      font-style: 14px;
+      text-transform: uppercase;
+   }
+   p {
+      @include sectionText;
+   }
+   
+}
+hr {
+   margin: 50px 0;
+   height: 1px;
+   background-color: #e5e5e5;
+}
 
 
 
